[package]
name = "eth1_test_rig"
version = "0.2.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2021"

[dependencies]
deposit_contract = { path = "../../common/deposit_contract"}
eth2_serde_utils = "0.1.1"
eth2_ssz = "0.4.1"
eth2_ssz_derive = "0.3.0"
serde = {version = "1.0.116" , features = ["rc"] }
serde_derive = "1.0.116"
serde_json = "1.0.58"
serde_yaml = "0.8.23"
state_processing = { path = "../../consensus/state_processing" }
tokio = { version = "1.14.0", features = ["time"] }
tree_hash = "0.4.1"
tree_hash_derive = "0.4.0"
types = { path = "../../consensus/types"}
unused_port = { path = "../../common/unused_port" }
web3 = { version = "0.18.0", default-features = false, features = ["http-tls", "signing", "ws-tls-tokio"] }
